samples/_failures_safe/1761317294_019eed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d630693.c: In function ‘main’:
./samples/SAFE/__tmp_3d630693.c:154:17: error: expected ‘;’ at end of input
  154 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_3d630693.c:154:9: error: expected declaration or statement at end of input
  154 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_3d630693.c:154:9: error: expected declaration or statement at end of input
